# Bonfire

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  shard.h  sm2.h  syntaxhighlighter.cpp  syntaxhighlighter.h
src/dialogs/: quickcapturedialog.cpp  quickcapturedialog.h
src/views/: dashboardwidget.cpp  dashboardwidget.h  librarywidget.cpp  librarywidget.h  reviewwidget.cpp  reviewwidget.h  shardeditorwidget.cpp  shardeditorwidget.h
